251116 - 일부 수정(테스트를 위한 printf()문 삭제 등등) 및 과제 완료

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
     "code-runner.runInTerminal": true,
-    "C_Cpp.default.compilerPath": "C:/MinGW/bin/gcc.exe"
+    "C_Cpp.default.compilerPath": "C:/MinGW/bin/gcc.exe",
+    "files.associations": {
+        "time.h": "c"
+    }
 }
